--- a/InflaStoreWebAPI/wwwroot/EmailRegister/EmailRegister.html
+++ b/InflaStoreWebAPI/wwwroot/EmailRegister/EmailRegister.html
@@ -3,12 +3,10 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
-    <!--<link rel="stylesheet" href="main.css" />
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script src="main.js"></script>-->
 </head>
 <body>
     <center>
+        <!--<img src="~/images/inflastore_logo.png" class="img" alt="could not be found">-->        
         <img src="https://www.inflastore.sk/WebAPIResources/inflastore_logo.png" alt="could not be found">
     </center>
     <center>
