vratenie html stranky  pri requeste

--- a/InflaStoreWebAPI/wwwroot/EmailForgotPassword/EmailForgotPassword.html
+++ b/InflaStoreWebAPI/wwwroot/EmailForgotPassword/EmailForgotPassword.html
@@ -11,8 +11,8 @@
         <img src="https://www.inflastore.sk/WebAPIResources/inflastore_logo.png" alt="could not be found">
     </center>
     <center>
-        <b><p font-family: Arial> Prosím potvrďte obnovu hesla kliknutím na nižšie zobrazené tlačidlo "Potvrdenie zmeny hesla" </p></b>
-        <b><p font-family: Arial> V prípade že ste sa nepokúšali zmeniť heslo e-mail ignorujte a prosím kontaktuje support@inflastore.sk </p></b>
+        <b>Prosím potvrďte obnovu hesla kliknutím na nižšie zobrazené tlačidlo "Potvrdenie zmeny hesla"</b>
+        <b>V prípade že ste sa nepokúšali zmeniť heslo e-mail ignorujte a prosím kontaktuje support@inflastore.sk</b>
     </center>
     <center>
         <a href="#URL#" style="text-align:center;display:inline-block;background:#fcd535;color:#000000;font-family:BinancePlex,Arial,PingFangSC-Regular,'Microsoft YaHei',sans-serif;font-size:14px;font-weight:900;line-height:15px;margin:0;text-decoration:none;text-transform:none;padding:10px 25px;border-radius:3px">                Potvrdenie zmeny hesla              </a>
